fix(components): jumping focus outline of accordion in firefox | bh | #1518

--- a/packages/components/src/components/content/accordion/accordion.scss
+++ b/packages/components/src/components/content/accordion/accordion.scss
@@ -61,6 +61,7 @@ button {
   cursor: pointer;
   font-weight: $p-font-weight-semibold;
   transition: background-color $p-animation-hover-duration-var $p-animation-hover-bezier;
+  overflow: hidden; // fixes rotating icon to increase bounding box of focus outline in firefox
 
   @include p-focus($p-color-state-focus, 0);
 
@@ -103,6 +104,7 @@ button {
 
 .icon {
   transform-origin: 50% 50%;
+  transform: rotate(0deg);
   transition: transform $p-animation-hover-duration-var $p-animation-hover-bezier;
   margin-left: $p-spacing-24;
 
